--- a/.github/workflows/Film.yml
+++ b/.github/workflows/Film.yml
@@ -38,4 +38,6 @@ jobs:
           git add W3U/Film.w3u
           git commit -m "Aggiornato file M3U8 con nuovi flussi" || echo "Nessun cambiamento da committare"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: true
