--- a/.github/workflows/Film.yml
+++ b/.github/workflows/Film.yml
@@ -1,19 +1,19 @@
 name: Film Scraper
 
 on:
-  workflow_dispatch:  # Permette l'esecuzione manuale
+  workflow_dispatch:  # ম্যানুয়ালি রান করার অপশন
   schedule:
-    - cron: '*/15 * * * *'  # Esegue ogni 3 ore: 0:00, 3:00, 6:00, 9:00, 12:00, 15:00, 18:00, 21:00 UTC
+    - cron: '0 */3 * * *'  # প্রতি ৩ ঘণ্টা পর: 00:00, 03:00, ..., 21:00
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository with custom token
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -26,8 +26,6 @@ jobs:
           pip install requests beautifulsoup4
 
       - name: Run SkyStreaming scraper
-        env:
-          GITHUB_WORKSPACE: ${{ github.workspace }}
         run: |
           python W3U/Film.py
 
